@@ -1,3 +1,6 @@
+07/01/15 Julien Dutheil
+* Added export filter for MSMC.
+
 22/09/14 -*- Version 2.2.0 -*-
 
 22/08/13 Julien Dutheil
